@@ -18,6 +18,9 @@ inappropriate by distribution packagers, so 1.23.3 adds build option
 - BASIC: Fix behaviour of RESTORE LOCAL with implied LOCAL of variables passed
   into a function or procedure.
 - BASIC: Incore file name on first line of program MUST be after a REM.
+- BASIC: STR$~ now reports an error if Hex64 is not enabled and the value
+  cannot be accurately displayed. Note that this is limited to STR$~, PRINT
+  continues to truncate the value to the bottom 32 bits.
 
 * 1.23.4 - 18 October 2024
 - General: Fix potential buffer overflow when detokenising code.
